# Iron

./: .clang-format  .gitignore  CMakeLists.txt  HighLevelIR.g4  HightLavelIR.g4  Iron.g4  Makefile  Makefile_old  README.md  Temp  compiler_config.yaml  hlir.g4  main.cpp  main.iron  roadmap.txt
.github/workflows/: qodana-check.yml
grammar/: Iron.g4  copy.txt  hlir.g4  hlir.txt  test_grammar.sh  test_hlir.sh  variables.txt
lib/std/: math.iron  output.iron
llvm_test/: Makefile  program.ll
parsers/: IronBaseListener.h  IronLexer.cpp  IronLexer.h  IronListener.cpp  IronListener.h  IronParser.cpp  IronParser.h
src/: Colors.cpp  HighLevelIR.cpp  LLVMExpr.cpp  LLVMIR.cpp  LLVMTypes.cpp  ScopeManager.cpp  SemanticalAnalysis.cpp  Utils.cpp  WriterCodeHLIR.cpp  main.cpp  main_old.cpp  main_tmp.cpp
src/analyser/: Analyser.cpp
src/config/: Configuration.cpp
src/headers/: Analyser.h  AnotherVarCheck.h  Colors.h  Configuration.h  Exceptions.h  Files.h  HLIRGenerator.h  HighLevelIR.h  Hlir.h  IronExceptions.h  LLVMIR.h  ScopeManager.h  SemanticAnalysis.h  SemanticException.h  SemanticalAnalysis.h  SymbolTable.h  TokenMap.h  Utils.h  Visitors.h  WriterCodeHLIR.h
src/hlir/: Exceptions.h  Function.cpp  FunctionArgs.cpp  HLIRGenerator.cpp  HighLevelIR.cpp  Hilr.cpp  Operations.cpp  TokenMap.h  Type.cpp  Utils.h  Variable.cpp  WriterCodeHLIR.cpp  hlir.h
src/hlir/generator/: Expr.cpp  Function.cpp  HLIRGenerator.cpp  HlirHelpers.cpp  IFelse.cpp  Loops.cpp  Structs.cpp
src/hlir/scope/: Function.cpp  FunctionArgs.cpp  IFelse.cpp  Operations.cpp  ScopeGuard.cpp  Statements.cpp  Structs.cpp  Type.cpp  Utilities.cpp  Variable.cpp  WriterCodeHLIR.cpp
src/lib/std/: output.iron
src/llvm/: EmitObject.cpp  Expr.cpp  Functions.cpp  LLD.cpp  LLVM.cpp  LLVMExpr.cpp  LLVMIR.cpp  LLVMTypes.cpp  Operations.cpp  Types.cpp  Utils.cpp  VM.cpp
src/parsers/: HightLavelIRBaseListener.cpp  HightLavelIRBaseListener.h  HightLavelIRLexer.cpp  HightLavelIRLexer.h  HightLavelIRListener.cpp  HightLavelIRListener.h  HightLavelIRParser.cpp  HightLavelIRParser.h  IronBaseListener.cpp  IronBaseListener.h  IronLexer.cpp  IronLexer.h  IronListener.cpp  IronListener.h  IronParser.cpp  IronParser.h
src/scope/: ScopeManager.cpp  ScopeManager.h
src/semantic/: Assignment.cpp  BoolExpr.cpp  Expr.cpp  Extern.cpp  Format.cpp  FunctionCallArg.cpp  Functions.cpp  IFElse.cpp  Loops.cpp  SemanticAnalysis.cpp  SemanticHelpers.cpp  Structs.cpp  VarAssignment.cpp
src/semantical/: Functions.cpp  SemanticalAnalysis.cpp
src/utils/: Colors.cpp  Path.cpp  ScopeManager.cpp
tests/: test_function_parser.cpp  test_hlir.cpp  test_hlir_boolean.cpp  test_hlir_code.cpp  test_hlir_common.cpp  test_hlir_expressions.cpp  test_hlir_function.cpp  test_hlir_function_arg.cpp  test_hlir_loops.cpp  test_hlir_operation.cpp  test_hlir_structs.cpp  test_hlir_types.cpp  test_hlir_variable.cpp  test_lexer.cpp  test_llvm_code.cpp  test_semantic_analysis.cpp  test_semantic_basic.cpp  test_semantic_boolean.cpp  test_semantic_common.cpp  test_semantic_control_flow.cpp  test_semantic_expressions.cpp  test_semantic_function_values.cpp  test_semantic_functions.cpp  test_semantic_loops.cpp  test_semantic_modules.cpp  test_semantic_nested.cpp  test_semantic_variables.cpp  test_semantical_analysis.cpp  test_var_parser.cpp
